fix: graph bounds layout issues (#242)
* Remove complicating row overflow behavior

* Set Liquidity SVG absolutely within available space in a container

* Align axis tick text to axis (to not require text height value here)

* Reset SVG padding boundaries to only require x-axis padding

    - padding around the SVG can be done in the container or page

* Fix dragging add liquidity range flags to work with new display mode:

    - make consistent with tick dragging logic

* Define overflow behavior of all cards:

    - they should by default expand to contain their own content
      and hide what falls outside their bounds

--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -20,6 +20,7 @@
   background-color: var(--page-card);
   color: var(--text-default);
   flex-direction: column;
+  overflow: auto;
   display: flex;
   position: relative;
 
