--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -68,7 +68,6 @@ a {
 .row,
 .col {
   display: flex;
-  overflow: auto;
 }
 .row {
   flex-direction: row;
